ffi/include/int2dds-ffi.h


typedef struct Int2DdsDataReaderQos Int2DdsDataReaderQos;
typedef struct Int2DdsDataWriterQos Int2DdsDataWriterQos;
typedef struct Int2DdsParticipantQos Int2DdsParticipantQos;
typedef struct Int2DdsPublisherQos Int2DdsPublisherQos;
typedef struct Int2DdsSubscriberQos Int2DdsSubscriberQos;
typedef struct Int2DdsTopicQos Int2DdsTopicQos;
typedef int32_t Int2DdsRet;
Int2DdsRet int2dds_datawriter_qos_create_default(struct Int2DdsDataWriterQos **qos_out);
Int2DdsRet int2dds_datawriter_qos_set_reliability(struct Int2DdsDataWriterQos *qos,
                                                  int32_t kind,
                                                  int64_t max_blocking_time_ns);
Int2DdsRet int2dds_datawriter_qos_set_durability(struct Int2DdsDataWriterQos *qos, int32_t kind);
Int2DdsRet int2dds_datawriter_qos_set_history(struct Int2DdsDataWriterQos *qos,
                                              int32_t kind,
                                              int32_t depth);
Int2DdsRet int2dds_datawriter_qos_set_data_representation(struct Int2DdsDataWriterQos *qos,
                                                          int32_t kind);
Int2DdsRet int2dds_datawriter_qos_set_ownership(struct Int2DdsDataWriterQos *qos, int32_t kind);
Int2DdsRet int2dds_datawriter_qos_set_ownership_strength(struct Int2DdsDataWriterQos *qos,
                                                         int32_t value);
Int2DdsRet int2dds_datawriter_qos_set_resource_limits(struct Int2DdsDataWriterQos *qos,
                                                      int32_t max_samples,
                                                      int32_t max_instances,
                                                      int32_t max_per_instance);
Int2DdsRet int2dds_datawriter_qos_set_lifespan(struct Int2DdsDataWriterQos *qos,
                                               int64_t duration_ns);
Int2DdsRet int2dds_datawriter_qos_set_destination_order(struct Int2DdsDataWriterQos *qos,
                                                        int32_t kind);
Int2DdsRet int2dds_datawriter_qos_set_latency_budget(struct Int2DdsDataWriterQos *qos,
                                                     int64_t duration_ns);
Int2DdsRet int2dds_datawriter_qos_set_transport_priority(struct Int2DdsDataWriterQos *qos,
                                                         int32_t priority);
Int2DdsRet int2dds_datawriter_qos_set_user_data(struct Int2DdsDataWriterQos *qos,
                                                const uint8_t *data,
                                                uintptr_t data_len);
Int2DdsRet int2dds_datawriter_qos_set_writer_data_lifecycle(struct Int2DdsDataWriterQos *qos,
                                                            bool autodispose);
Int2DdsRet int2dds_datawriter_qos_destroy(struct Int2DdsDataWriterQos *qos);
Int2DdsRet int2dds_datareader_qos_create_default(struct Int2DdsDataReaderQos **qos_out);
Int2DdsRet int2dds_datareader_qos_set_reliability(struct Int2DdsDataReaderQos *qos,
                                                  int32_t kind,
                                                  int64_t max_blocking_time_ns);
Int2DdsRet int2dds_datareader_qos_set_durability(struct Int2DdsDataReaderQos *qos, int32_t kind);
Int2DdsRet int2dds_datareader_qos_set_history(struct Int2DdsDataReaderQos *qos,
                                              int32_t kind,
                                              int32_t depth);
Int2DdsRet int2dds_datareader_qos_set_data_representation(struct Int2DdsDataReaderQos *qos,
                                                          int32_t kind);
Int2DdsRet int2dds_datareader_qos_set_ownership(struct Int2DdsDataReaderQos *qos, int32_t kind);
Int2DdsRet int2dds_datareader_qos_set_resource_limits(struct Int2DdsDataReaderQos *qos,
                                                      int32_t max_samples,
                                                      int32_t max_instances,
                                                      int32_t max_per_instance);
Int2DdsRet int2dds_datareader_qos_set_destination_order(struct Int2DdsDataReaderQos *qos,
                                                        int32_t kind);
Int2DdsRet int2dds_datareader_qos_set_time_based_filter(struct Int2DdsDataReaderQos *qos,
                                                        int64_t minimum_separation_ns);
Int2DdsRet int2dds_datareader_qos_set_latency_budget(struct Int2DdsDataReaderQos *qos,
                                                     int64_t duration_ns);
Int2DdsRet int2dds_datareader_qos_set_user_data(struct Int2DdsDataReaderQos *qos,
                                                const uint8_t *data,
                                                uintptr_t data_len);
Int2DdsRet int2dds_datareader_qos_set_reader_data_lifecycle(struct Int2DdsDataReaderQos *qos,
                                                            int64_t autopurge_nowriter_ns,
                                                            int64_t autopurge_disposed_ns);
Int2DdsRet int2dds_datareader_qos_destroy(struct Int2DdsDataReaderQos *qos);
Int2DdsRet int2dds_topic_qos_create_default(struct Int2DdsTopicQos **qos_out);
Int2DdsRet int2dds_topic_qos_set_reliability(struct Int2DdsTopicQos *qos,
                                             int32_t kind,
                                             int64_t max_blocking_time_ns);
Int2DdsRet int2dds_topic_qos_set_durability(struct Int2DdsTopicQos *qos, int32_t kind);
Int2DdsRet int2dds_topic_qos_set_history(struct Int2DdsTopicQos *qos, int32_t kind, int32_t depth);
Int2DdsRet int2dds_topic_qos_set_deadline(struct Int2DdsTopicQos *qos, int64_t period_ns);
Int2DdsRet int2dds_topic_qos_set_liveliness(struct Int2DdsTopicQos *qos,
                                            int32_t kind,
                                            int64_t lease_duration_ns);
Int2DdsRet int2dds_topic_qos_set_destination_order(struct Int2DdsTopicQos *qos, int32_t kind);
Int2DdsRet int2dds_topic_qos_set_resource_limits(struct Int2DdsTopicQos *qos,
                                                 int32_t max_samples,
                                                 int32_t max_instances,
                                                 int32_t max_per_instance);
Int2DdsRet int2dds_topic_qos_set_transport_priority(struct Int2DdsTopicQos *qos, int32_t priority);
Int2DdsRet int2dds_topic_qos_set_lifespan(struct Int2DdsTopicQos *qos, int64_t duration_ns);
Int2DdsRet int2dds_topic_qos_set_ownership(struct Int2DdsTopicQos *qos, int32_t kind);
Int2DdsRet int2dds_topic_qos_set_data_representation(struct Int2DdsTopicQos *qos, int32_t kind);
Int2DdsRet int2dds_topic_qos_destroy(struct Int2DdsTopicQos *qos);
Int2DdsRet int2dds_participant_qos_create_default(struct Int2DdsParticipantQos **qos_out);
Int2DdsRet int2dds_participant_qos_set_user_data(struct Int2DdsParticipantQos *qos,
                                                 const uint8_t *data,
                                                 uintptr_t data_len);
Int2DdsRet int2dds_participant_qos_destroy(struct Int2DdsParticipantQos *qos);
Int2DdsRet int2dds_datawriter_qos_set_deadline(struct Int2DdsDataWriterQos *qos, int64_t period_ns);
Int2DdsRet int2dds_datareader_qos_set_deadline(struct Int2DdsDataReaderQos *qos, int64_t period_ns);
Int2DdsRet int2dds_datawriter_qos_set_liveliness(struct Int2DdsDataWriterQos *qos,
                                                 int32_t kind,
                                                 int64_t lease_duration_ns);
Int2DdsRet int2dds_datareader_qos_set_liveliness(struct Int2DdsDataReaderQos *qos,
                                                 int32_t kind,
                                                 int64_t lease_duration_ns);
Int2DdsRet int2dds_publisher_qos_create_default(struct Int2DdsPublisherQos **qos_out);
Int2DdsRet int2dds_publisher_qos_set_partition(struct Int2DdsPublisherQos *qos,
                                               const char *const *partitions,
                                               uintptr_t partition_count);
Int2DdsRet int2dds_publisher_qos_destroy(struct Int2DdsPublisherQos *qos);
Int2DdsRet int2dds_subscriber_qos_create_default(struct Int2DdsSubscriberQos **qos_out);
Int2DdsRet int2dds_subscriber_qos_set_partition(struct Int2DdsSubscriberQos *qos,
                                                const char *const *partitions,
                                                uintptr_t partition_count);
Int2DdsRet int2dds_subscriber_qos_destroy(struct Int2DdsSubscriberQos *qos);